# flight-ticket-watcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: linear.yaml  settings.json
.claude/agents/: code-reviewer.md  domain-researcher.md  fixer.md  linear-ops.md
alembic/: env.py
alembic/versions/: 69af851a_add_search_configs_scan_runs_price_snapshots_tables.py  a1b2c3d4_add_composite_indexes_for_query_performance.py  b5c6d7e8_add_retry_columns_to_search_configs.py  c3d4e5f6_add_price_alerts_table.py  c7d8e9f0_add_min_trip_days_to_search_configs.py  d1e2f3a4_add_check_constraints_to_search_configs.py
docs/plans/: 2026-03-08-fli-1-python-project-scaffold.md  2026-03-08-fli-2-fast-flights-scanner.md  2026-03-08-fli-3-patchright-latam-feasibility.md  2026-03-08-fli-4-return-flight.md  2026-03-08-fli-5-fix-return-flight-capture.md  (+49 more)
research/: latam-api-analysis.md  market-research.md  patchright-feasibility-results.md  search_response.json
scripts/: best_combinations.py  discover_return_flow.py  entrypoint.sh  find_cheapest.py  roundtrip_vs_oneway.py
tests/: test_alert_sender.py  test_alerts.py  test_browser_profiles.py  test_circuit_breaker.py  test_cli.py  test_date_expansion.py  test_db.py  test_delays.py  test_errors.py  test_health_server.py  test_latam_scraper.py  test_mailer.py  test_main.py  test_models.py  test_orchestrator.py  test_pair_validation.py  test_queries.py  test_scanner.py  test_scanner_state.py  test_scheduler.py
web/: .env.example  Dockerfile  README.md  package-lock.json  package.json  prisma.config.ts
web/app/: page.tsx  (+2 more)
(+45 files in other folders)
