[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-watcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fast-flights @ git+https://github.com/AWeirdDev/flights.git",
    "patchright",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "APScheduler>=3.11,<4",
    "click>=8.1",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flight_watcher"]
